@startuml
Alumno  --> "*" Materia : materiasAprobadas
Inscripcion *-- Alumno : alumno
Inscripcion  --> "*" Materia : materiasQueSeQuiereAnotar
Materia  --> "*" Materia : correlativas


class Alumno {
    - List<Materia> materiasAprobadas;
    + Alumno(List<Materia> materiasAprobadas) {}
    + boolean pudeCursarla(Materia materia) {}
}

class Inscripcion {
    - Alumno alumno;
    - List<Materia> materiasQueSeQuiereAnotar;
    + Inscripcion(Alumno alumno, List<Materia> materias) {}
    + boolean aprobada() {}
}

class Materia {
    - List<Materia> correlativas;
    + Materia(List<Materia> correlativas) {}
    + List<Materia> getCorrelativas() {}
}

@enduml


